--- a/index.html
+++ b/index.html
@@ -8,16 +8,12 @@
 </head>
 <body>
     <header class="container">
-    <img src="img/avatar-perfil-.png" class="rounded-circle" width="150" height="150" alt="avatar de Maria" srcset="">
-    <p>Eu sou a Maria</p>
-    <h1>Eu estou aprendendo programação</h1>
-    <p>Sou estudante de programação. 
-     Estudo no colégio Beatriz Faria
-     Ansay Cívico - Mitar.
-     E tenho certificado no Alura em 
-     programação no Alura Start.
-     Estou aprendo usando 
-     HTML, CSS e JavaScript. 
+ <img src="img/avatar-perfil.png" class="rounded-circle" width="150" alt="Avatar da Evelogia">
+   <p class="lead">Eu sou a Evelogia</p>
+   <h1>Eu estou aprendendo programação<h1>
+<p>Eu sou estudante do colegio C.C.M Beatriz Faria Ansay,
+tenho tres certificados de nove no alura,
+o alura tem index, style, js e java</p>
      Veja os projetos que já desenvolvi:
     </p>
     <div>
